# for display continuity sake please use 2 spaces instead of tabs

2012-03-31 mmichaud <michael.michaud@free.fr>
  * Bug #3510778 EZ Button does not respect layer editability

2012-03-24 mmichaud <michael.michaud@free.fr>
  * FR 3472020 : use a numeric pattern to save long attribute names in dbf
  * FR 3488025 : Delete existing sbn/sbx/qix files when writing a shp
  * FR 3506380 : union selected features in place implemented in
    MergeSelectedFeaturesPlugIn (right click in LayerViewPanel)
  
2012-03-18 mmichaud <michael.michaud@free.fr>
  * FlexibleDateParser now takes Locale into account for Pattern ordering

2012-03-14 mmichaud <michael.michaud@free.fr>
  * Improved Database Layer loader. It did not work in the case where
    geometries have a SRID but geometry_columns table was not filled.
    Now, if no SRID is found in geometry_columns, the window bbox SRID is set to
    the same value as the geometry SRID.
    There is still a (non fatal) exception thrown the first time the query
    is executed.

2012-03-05 mmichaud <michael.michaud@free.fr>
  * SimpleQuery : change the definition of strictIntersection from
    TFFTFF*** to TFF*FF*** so that closed linestring can also be found

2012-02-25 mmichaud <michael.michaud@free.fr>
  * Small improvements of status bar layout

2012-02-24 mmichaud <michael.michaud@free.fr>
  * Bug #3487686 BeanshellEditor : the window focus problem between OpenJUMP
    and BeanshellEditor should be solved (in LayerViewPanel class)

2012-02-23 mmichaud <michael.michaud@free.fr>
  * Bug #3486847 Wrong Dialog message when Closing project
  * Bug #3491956 Union of overlapping lines could not be merged

2012-02-22 mmichaud <michael.michaud@free.fr>
  * Bug #3488976 : fixed problems in the Noder plugin except one depending on a
    new version of JTS (preserving z with snap-rounding noder). There is still
    room for optimization in this plugin.
  # Bug 3488028 : datasets read from a zip file are made readonly